projects/los-retail/consul/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: los-retail-dev
  labels:
    app: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: consul:1.15.4
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "150m"
              memory: "400Mi"
