projects/los-retail/consul/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
  namespace: los-retail-dev
  labels:
    app: consul
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  ingressClassName: public
  tls:
    - hosts:
      - los-retail-consul-dev.coherent.in
      secretName: consul-tls
  rules:
  - host: "los-retail-consul-dev.coherent.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consul
            port:
              number: 443  # Matching the service port for TLS
